--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.4"
+    "dotenv": "^16.4.4",
+    "tslib": "^2.6.2"
   }
 }
