--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-  "name": "quickstart-typescript-template",
+  "name": "RCCapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "tsc && ts-node src/main.ts"
+    "build": "npx tsc",
+    "start": "npm run build && node dist/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/sequelize": "^4.28.20",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.4",
-    "tslib": "^2.6.2"
+    "@types/express": "^5.0.1",
+    "@types/ws": "^8.18.0",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.0",
+    "sequelize": "^6.37.6",
+    "tslib": "^2.8.1",
+    "typeorm": "^0.3.21",
+    "ws": "^8.18.1"
   }
 }
